compiler/testData/diagnostics/tests/cast/constants.latestLV.kt
// LATEST_LV_DIFFERENCE
// RUN_PIPELINE_TILL: BACKEND
// FIR_IDENTICAL
fun asCall() {
    1 <!INTEGER_LITERAL_CAST_INSTEAD_OF_TO_CALL!>as Int<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Byte<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Short<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Long<!>
    1 <!CAST_NEVER_SUCCEEDS_ERROR!>as<!> Char
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Double<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Float<!>

    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Int<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Byte<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Short<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Long<!>
    1.0 <!CAST_NEVER_SUCCEEDS_ERROR!>as<!> Char
    1.0 <!USELESS_CAST!>as Double<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Float<!>

    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Int<!>
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Byte<!>
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Short<!>
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Long<!>
    1f <!CAST_NEVER_SUCCEEDS_ERROR!>as<!> Char
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as Double<!>
    1f <!USELESS_CAST!>as Float<!>
}

fun asSafe() {
    1 <!INTEGER_LITERAL_CAST_INSTEAD_OF_TO_CALL!>as? Int<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Byte<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Short<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Long<!>
    1 <!CAST_NEVER_SUCCEEDS_ERROR!>as?<!> Char
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Double<!>
    1 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Float<!>

    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Int<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Byte<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Short<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Long<!>
    1.0 <!CAST_NEVER_SUCCEEDS_ERROR!>as?<!> Char
    1.0 <!USELESS_CAST!>as? Double<!>
    1.0 <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Float<!>

    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Int<!>
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Byte<!>
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Short<!>
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Long<!>
    1f <!CAST_NEVER_SUCCEEDS_ERROR!>as?<!> Char
    1f <!NUMERIC_CAST_NEVER_SUCCEEDS_BUT_CAN_BE_REPLACED_WITH_TO_CALL!>as? Double<!>
    1f <!USELESS_CAST!>as? Float<!>
}

/* GENERATED_FIR_TAGS: asExpression, functionDeclaration, integerLiteral */
